--- a/index.html
+++ b/index.html
@@ -1,24 +1,118 @@
+<!--A Design by W3layouts
+Author: W3layout
+Author URL: http://w3layouts.com
+License: Creative Commons Attribution 3.0 Unported
+License URL: http://creativecommons.org/licenses/by/3.0/
+-->
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="robots" content="noindex, nofollow">
-    <title>Сайт на реконструкции</title>
-    <style>
-        main {
-            max-width: 70%;
-            margin: 100px auto 0 auto;
-            padding: 25px;
-            text-align: center;
-            font-size: 20px;           
-        }
-    </style>
+<title>Wondrous Coming Soon Widget a Flat Responsive Widget Template :: w3layouts </title>
+	<!-- Meta tags -->
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+		<meta name="keywords" content="Wondrous Coming Soon Widget Responsive Widget, Audio and Video players, Login Form Web Template, Flat Pricing Tables, Flat Drop-Downs, Sign-Up Web Templates, Flat Web Templates, Login Sign-up Responsive Web Template, Smartphone Compatible Web Template, Free Web Designs for Nokia, Samsung, LG, Sony Ericsson, Motorola Web Design" />
+		<script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
+	<!-- Meta tags -->
+
+
+<!-- font-awesome icons -->
+   <link rel="stylesheet" href="css/font-awesome.min.css" />
+
+<!-- //font-awesome icons -->
+<!--stylesheets-->
+<link href="css/style.css" rel='stylesheet' type='text/css' media="all">
+<!--//style sheet end here-->
+
+<link href="//fonts.googleapis.com/css?family=Open+Sans+Condensed:300,300i" rel="stylesheet">
+
 </head>
-<body>
-    <main>
-        <p>ГРЯДЯЕТ НОВЫЙ СТАРТ!</p>
-        <p>Наш сайт находится в стадии разработки, и мы почти готовы к работе!<br>
-Мы готовим для вас нечто удивительное и захватывающее - специальный сюрприз для подписчиков</p>
-   </main>
+<body>  
+
+
+<div class="count-center">
+<div class="top">
+<h1>Сайт находится на реконструкции</h1>
+<h2>В скором времени мы вернемся к Вам!</h2>
+</div>
+<!--countdown-->
+<div class="count-time">
+    <div class="examples">
+        <div class="simply-countdown-losange " id="simply-countdown-losange">
+		
+	
+		</div>
+</div>
+<div class="clearfix"></div>
+</div>
+<!--//countdown-->
+<!--newsletter-->
+						<div class="newsletter ">
+							<div class="letter">
+							<form action="#" method="post">
+							
+								<input type="email" name="email" required="" placeholder="Enter your email">
+								
+								<input type="submit" value="Subscribe">
+							</form>
+							<div class="clearfix"></div>
+						  </div>		    			
+						  <div class="icons">
+							<ul>
+								<li><a href="#"><span class="fa fa-facebook"></span></a></li>
+								<li><a href="#"><span class="fa fa-twitter"></span></a></li>
+								<li><a href="#"><span class="fa fa-rss"></span></a></li>
+								<li><a href="#"><span class="fa fa-vk"></span></a></li>
+							</ul>
+						</div>
+						<div class="clearfix"></div>
+						</div>
+						<!--//newsletter-->
+
+
+
+<div class="copyright">
+	<p><a href="https://web-exito.ru/html-zaglushki-dlya-sajta/">Скачать заглушки сайта: Web-Exito.ru</a></p>
+				</div>
+</div>
+
+
+
+
+		<script type='text/javascript' src='js/jquery-2.2.3.min.js'></script>
+		<!-- //js -->
+<!--menu script-->
+<script src="js/simplyCountdown.js"></script>
+<script>
+  /**
+   * WARNING: I set this coundtown to be running until the end of times.
+   * So when you'll init the plugin, follow how it's done in plugin documentation.
+   */
+  var d = new Date();
+    d.setDate(d.getDate() + 10);
+
+    // default example
+    simplyCountdown('.simply-countdown-one', {
+        year: d.getFullYear(),
+        month: d.getMonth() + 1,
+        day: d.getDate()
+    });
+
+    // inline example
+    simplyCountdown('.simply-countdown-inline', {
+        year: d.getFullYear(),
+        month: d.getMonth() + 1,
+        day: d.getDate(),
+        inline: true
+    });
+
+    //jQuery example
+    $('#simply-countdown-losange').simplyCountdown({
+        year: d.getFullYear(),
+        month: d.getMonth() + 1,
+        day: d.getDate(),
+        enableUtc: false
+    });
+</script>
 </body>
-</html>
+</html>		
