--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 
 <div class="count-center">
 <div class="top">
-<h1>Сайт находится на реконструкции</h1>
-<h2>В скором времени мы вернемся к Вам!</h2>
+<h1>The site is under reconstruction</h1>
+<h2>We will get back to you soon!</h2>
 </div>
 <!--countdown-->
 <div class="count-time">
@@ -72,7 +72,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 
 
 <div class="copyright">
-	<p><a href="https://web-exito.ru/html-zaglushki-dlya-sajta/">Скачать заглушки сайта: Web-Exito.ru</a></p>
+	<p></p>
 				</div>
 </div>
 
